[package]
name = "index_list"
version = "0.2.4"
description = "A doubly linked list implemented in Rust using vector indexes"
authors = ["Stefan Lindblad <stefan.lindblad@linux.com>"]
edition = "2018"
license = "LGPL-2.1-or-later"
repository = "https://github.com/Fairglow/index-list.git"
readme = "README.md"

[dev-dependencies]
criterion = "0.3.4"
rand = "0.8.3"

[[bench]]
name = "indexlist-benchmark"
path = "benches/benchmark.rs"
harness = false
