[package]
name = "index_list"
version = "0.2.15"
description = "A doubly linked list implemented in safe Rust using vector indexes"
keywords = ["linked-list"]
categories = ["data-structures"]
authors = ["Stefan Lindblad <stefan.lindblad@linux.com>"]
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/Fairglow/index-list.git"
readme = "README.md"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[features]
# `iter_mut` is guarded behind a feature flag because the implementation uses unsafety
iter_mut = []

[[bench]]
name = "indexlist-benchmark"
path = "benches/benchmark.rs"
harness = false

[profile.release]
codegen-units = 1
lto = true
